@@ -55,6 +55,7 @@ The following bugs are resolved with this release:
   [25896] Incorrect prctl
   [25902] Bad LOADARGS_N
   [25966] Incorrect access of __x86_shared_non_temporal_threshold for x32
+  [25976] nss_compat: internal_end*ent may clobber errno, hiding ERANGE
 
 
 Version 2.30
